--- a/happy_cactus/cactus.css
+++ b/happy_cactus/cactus.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: "Open-sans", sans-serif;
     font-size: 16px;
@@ -148,3 +149,17 @@ background-blend-mode: lighten;}
 }
 li{letter-spacing: 0.05em;
 font-weight: 100;}
+
+
+@media only screen and (max-width: 500px){
+    #headerMain{
+        display: flex;
+        flex-direction: column-reverse;
+        font-size: small;
+    }
+
+    .arrow{
+        margin-top: 0;
+    }
+
+}
